--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,26 @@ layout: compress
 
     {% include footer.html %}
 
-    <link rel="stylesheet" href="{{'/css/main.css' | prepend: site.baseurl}}" />
-
     <script>
       window.addEventListener('DOMContentLoaded', function () {
+        // defer loading images
         var images = [].slice.apply(document.querySelectorAll('img[data-src]'));
 
         images.forEach(function (img) {
           img.src = img.getAttribute('data-src');
+        });
+
+        // defer main.css
+        var head = document.querySelector('head');
+        var styles = ["{{'/css/main.css' | prepend: site.baseurl}}"];
+
+        styles.forEach(function (src) {
+          var elt = document.createElement('link');
+
+          elt.rel = 'stylesheet';
+          elt.href = src;
+
+          head.appendChild(elt);
         });
       });
     </script>
