Changed logo redirect to homepage instead of about

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand hidden-sm-down" href="{{ site.baseurl }}/about/">
+  <a class="navbar-brand hidden-sm-down" href="{{ site.baseurl }}/">
     <img data-src="{{ '/images/photo-compressed.jpg' | prepend: site.baseurl }}" width="30" height="30" class="rounded d-inline-block align-top" alt="">
 
     <div class="d-inline-block nav-icon">
