Sppeding up analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ layout: compress
     {% include footer.html %}
 
     <script>
-      window.addEventListener('DOMContentLoaded', function () {
+      document.addEventListener('DOMContentLoaded', function () {
         // defer loading images
         var images = [].slice.apply(document.querySelectorAll('img[data-src]'));
 
