--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ layout: compress
 
     {% include footer.html %}
 
-    <script>
+    <script async>
       document.addEventListener('DOMContentLoaded', function () {
         // defer loading images
         var images = [].slice.apply(document.querySelectorAll('img[data-src]'));
