Started article on Entanglement. Tried window.load event for async images. Fixed React code for functional web article

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ layout: compress
     {% include footer.html %}
 
     <script async>
-      document.addEventListener('DOMContentLoaded', function () {
+      window.addEventListener('load', function () {
         // defer loading images
         var images = [].slice.apply(document.querySelectorAll('img[data-src]'));
 
