--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
   <head>
     {% include head.html %}
 
-    {% if site.host != '127.0.0.1' %}</meta>
+    {% if site.host != '127.0.0.1' %}
       {% include google_analytics.html %}
       {% include yandex_analytics.html %}
       {% include gostats_analytics.html %}
