--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-66575838-1', 'auto');
+  ga('create', window.location.protocol === "http:" ? 'UA-66575838-1' : 'UA-66575838-2', 'auto');
   ga('send', 'pageview');
 
 </script>
