--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 
 <div class="post">
@@ -14,4 +15,6 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+
+  {% include disqus.html %}
 </div>
