--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-this.page.url = '{{ page.url | prepend: site.baseurl }}';
+this.page.url = '{{ page.url | prepend: site.baseurl | prepend: site.url }}';
 this.page.identifier = '{{ page.slug }}';
 };
 (function() {
