Layouts and about page enhancements

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,6 +25,7 @@ layout: compress
       </section>
     </div>
 
-    {% include google_analytics.html %}
+    {% include analytics.html %}
+    {% include optimizations.html %}
   </body>
 </html>
