--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -25,6 +25,7 @@ layout: compress
       </div>
     </div>
 
-    {% include google_analytics.html %}
+    {% include analytics.html %}
+    {% include optimizations.html %}
   </body>
 </html>
