--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -32,8 +32,21 @@
   }
 }
 
-.post .post-content img.photo-large {
-  float: left;
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex {
+  display: flex;
+}
+
+img.photo-large {
   max-width: 250px;
   margin: 0 .5rem;
 }
