--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@ layout: compress
 
     {% include footer.html %}
     {% include optimizations.html %}
+    {% include analytics.html %}
   </body>
 </html>
