--- a/_includes/optimizations.html
+++ b/_includes/optimizations.html
@@ -1,5 +1,5 @@
 <script async>
-  window.addEventListener('load', function () {
+  window.addEventListener('DOMContentLoaded', function () {
     // defer loading images
     var images = [].slice.apply(document.querySelectorAll('img[data-src]'));
 
