Optimizations and IntelliJ performance tips post

--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,6 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', window.location.protocol === "http:" ? 'UA-66575838-1' : 'UA-66575838-2', 'auto');
+  ga('create', window.location.protocol === "https:" ? 'UA-66575838-2' : 'UA-66575838-1', 'auto');
   ga('send', 'pageview');
-
 </script>
