--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -13,7 +13,7 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #373a3c;
-  background: $background-color $background-image no-repeat top left fixed;
+  // background: $background-color $background-image no-repeat top left fixed;
   // background: $background-color;
 }
 
