--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -36,3 +36,41 @@
   background: $post-background-color;
   padding: 20px 0 15px 0;
 }
+
+kbd {
+  display: inline-block;
+  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+  font-size: 1.1em;
+  white-space: nowrap;
+  border-bottom: 4px solid #ddd;
+  border-right: 2px solid #ddd;
+  border-left: 2px solid #ddd;
+  border-top: 1px solid #ddd;
+  padding: 2px 6px;
+  border-radius: 5px;
+  margin: 2px;
+}
+
+table.table {
+  &.table-bordered {
+    $border-color: #aaa;
+    $thead-bg-color: #ddd;
+
+    border: 1px solid $border-color;
+    border-collapse: collapse;
+
+    thead {
+      th {
+        background: $thead-bg-color;
+      }
+    }
+
+    tr, th, td {
+      border: 1px solid $border-color;
+    }
+
+    th, td {
+      padding: 1em;
+    }
+  }
+}
