Updated analytics handling and implemented image gallery on about page

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,2 +1,4 @@
-{% include google_analytics.html %}
-{% include gostats_analytics.html %}
+{% if jekyll.environment != 'development' %}
+    {% include google_analytics.html %}
+    {% include gostats_analytics.html %}
+{% endif %}
