--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,5 +1,32 @@
-#map {
-    height: 380px;
-    display: block;
+.carousel-item {
+    img {
+        cursor: pointer;
+    }
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    cursor: pointer;
+
+    &.visible {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .lightbox-inner {
+            width: 75%;
+            max-width: 75%;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+    }
 }
