Removed Disqus due to inactivity. Thrashed some old posts. Finished CPU architecture post

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -2,6 +2,10 @@
 
 .container {
   .post {
+    img.medium {
+      max-width: 50%;
+    }
+
     code {
       padding: .2rem .4rem;
       color: #bd4147;
