Fixed some styles and markup

--- a/_includes/references/irrlicht-newton-tutorials.html
+++ b/_includes/references/irrlicht-newton-tutorials.html
@@ -1,44 +1,44 @@
-<div class="card">
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">
+<div>
+    <ul>
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-08-25-introduction %}">
                 Introduction
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-08-26-application-architecture %}">
                 Application architecture
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-08-27-first-application %}">
-                Application skeleton
+                First application
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-08-28-first-script %}">
-                Scripting
+                First script
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-08-29-prepare-to-add-some-newtonianity %}">
-                Introducing physics
+                Let's add some physics
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-12-15-making-simple-level-with-blender %}">
                 Modelling simple level with Blender3D
             </a>
         </li>
 
-        <li class="list-group-item">
+        <li>
             <a href="{% post_url irrlicht-newton-tutorials/2015-12-16-finishing-the-first-scene %}">
-                Wrapping up the first scene
+                Finishing the first scene
             </a>
         </li>
     </ul>
