--- a/_includes/optimizations.html
+++ b/_includes/optimizations.html
@@ -63,7 +63,7 @@
       var bgSrc = '/images/background2-compressed.jpg';
 
       if (navigator.userAgent.indexOf("Chrome") !== -1) {
-        bgSrc = '/images/background2-compressed.webp';
+        bgSrc = '/images/background1.webp';
       }
 
       document.body.style['background'] = 'url(' + bgSrc + ') no-repeat top left fixed';
