Remove site.baseurl interpolation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand hidden-sm-down" href="{{ site.baseurl }}/">
-    <img data-src="{{ '/images/photo-compressed_optimized.jpg' | prepend: site.baseurl }}" width="30" height="30" class="rounded d-inline-block align-top" alt="">
+  <a class="navbar-brand hidden-sm-down" href="//">
+    <img data-src="//images/photo-compressed_optimized.jpg" width="30" height="30" class="rounded d-inline-block align-top" alt="">
 
     <div class="d-inline-block nav-icon">
       <div>Artem Shoobovych</div>
@@ -9,8 +9,8 @@
   </a>
 
   <div class="nav navbar-nav">
-    <a class="nav-link nav-item {% if page.url == '/' %}active{% endif %}" href="{{ '/' | prepend: site.baseurl }}">Home</a>
+    <a class="nav-link nav-item {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
 
-    <a class="nav-link nav-item {% if page.url == '/about/' %}active{% endif %}" href="{{ '/about/' | prepend: site.baseurl }}">About</a>
+    <a class="nav-link nav-item {% if page.url == '/about/' %}active{% endif %}" href="/about/">About</a>
   </div>
 </nav>
