--- a/_includes/optimizations.html
+++ b/_includes/optimizations.html
@@ -47,7 +47,7 @@
 
     // defer main.css
     var head = document.querySelector('head');
-    var styles = [ "{{'/css/main.css' | prepend: site.baseurl}}" ];
+    var styles = [ "//css/main.css" ];
 
     styles.forEach(function (src) {
       var elt = document.createElement('link');
@@ -60,10 +60,10 @@
 
     setTimeout(function () {
       // load heavy body background
-      var bgSrc = '/images/background2-compressed.jpg';
+      var bgSrc = '//images/background2-compressed.jpg';
 
       if (navigator.userAgent.indexOf("Chrome") !== -1) {
-        bgSrc = '/images/background2-compressed.webp';
+        bgSrc = '//images/background2-compressed.webp';
       }
 
       document.body.style['background'] = 'url(' + bgSrc + ') no-repeat top left fixed';
