--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,7 +7,7 @@ layout: compress
   <head>
     {% include head.html %}
 
-    <link rel="stylesheet" href="{{ '/css/about.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="//css/about.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
   </head>
 
