--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,5 @@
-<nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand hidden-sm-down" href="//">
-    <img data-src="/images/photo-compressed_optimized.jpg" width="30" height="30" class="rounded d-inline-block align-top" alt="">
-
-    <div class="d-inline-block nav-icon">
-      <div>Artem Shoobovych</div>
-      <div>Software developer</div>
-    </div>
-  </a>
-
-  <div class="nav navbar-nav">
+<nav class="top">
+  <div class="align-container">
     <a class="nav-link nav-item {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
 
     <a class="nav-link nav-item {% if page.url == '/about/' %}active{% endif %}" href="/about/">About</a>
