Refactored the UI

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,5 @@
 
     <a class="nav-link nav-item {% if page.url == '/about/' %}active{% endif %}" href="/about/">About</a>
   </div>
+  <aside></aside>
 </nav>
