--- a/_includes/index.html
+++ b/_includes/index.html
@@ -20,12 +20,6 @@
   </main>
 
   <aside>
-    <div class="nav-content">
-      <img src="" alt="">
-      Tag cloud
-      <a href="">Tag #1</a>
-      <a href="">Tag #2</a>
-      <a href="">Tag #3</a>
-    </div>
+    {% include sidebar.html %}
   </aside>
 </div>
