--- a/_sass/new-look.scss
+++ b/_sass/new-look.scss
@@ -1,3 +1,9 @@
+$article-width: 1024px;
+$aside-width: 280px;
+$header-height: 64px;
+$font-size: 18px;
+$article-font-size: 21px;
+
 body {
   padding: 0;
   margin: 0;
@@ -14,6 +20,7 @@ a:hover {
 
 a, a:active {
     color: #354790;
+    text-decoration: none;
 }
 
 img {
@@ -22,6 +29,10 @@ img {
 
 pre {
     overflow: scroll;
+
+    &.highlight {
+      padding: 0.5em;
+    }
 }
 
 a.btn {
@@ -40,13 +51,17 @@ footer {
     background: #fff;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    height: 64px;
+    height: $header-height;
     align-items: center;
+    justify-content: center;
+
+    .align-container {
+      justify-content: space-between;
+    }
 }
 
 nav.top {
-  height: 64px;
+  height: $header-height;
   background-color: #f7f7f9;
   display: flex;
   justify-content: center;
@@ -71,8 +86,11 @@ nav.top {
 .align-container {
   display: flex;
   flex-direction: row;
-  max-width: 780px + 280px + 18px;
-  min-width: 780px + 280px + 18px;
+  // max-width: $article-width + $aside-width + $font-size;
+  // min-width: $article-width + $aside-width + $font-size;
+
+  max-width: $article-width;
+  min-width: $article-width;
   height: 100%;
   align-items: center;
 }
@@ -84,7 +102,7 @@ nav.top {
   margin-top: 1em;
 
   main {
-    max-width: 780px;
+    max-width: $article-width;
     display: flex;
     flex-direction: column;
 
@@ -92,29 +110,29 @@ nav.top {
       margin-bottom: 1em;
       padding: 1em;
       background: #f7f7f9;
-      min-width: 780px - (2 * 18px);
-      max-width: 780px - (2 * 18px);
+      min-width: $article-width - (2 * $font-size);
+      max-width: $article-width - (2 * $font-size);
       border-radius: 5px;
 
-      font-size: 21px;
+      font-size: $article-font-size;
     }
   }
+}
 
-  aside {
+aside {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1em;
+  min-width: $aside-width;
+  max-width: $aside-width;
+  // margin-top: 1em;
+
+  .nav-content {
+    padding: 1em;
+    background: #f7f7f9;
     display: flex;
     flex-direction: column;
-    margin-left: 1em;
-    min-width: 280px;
-    max-width: 280px;
-    // margin-top: 1em;
-
-    .nav-content {
-      padding: 1em;
-      background: #f7f7f9;
-      display: flex;
-      flex-direction: column;
-      border-radius: 5px;
-    }
+    border-radius: 5px;
   }
 }
 
@@ -130,6 +148,10 @@ h3 {
   font-size: 24px;
 }
 
+h1, h2, h3 {
+  margin-top: 0;
+}
+
 kbd {
     border-radius: 8px;
     background: #fff;
@@ -141,21 +163,24 @@ kbd {
     border: 1px solid #dedede;
 }
 
-@media screen and (max-width: 1120px) {
-  .align-container {
-    max-width: 780px;
-    min-width: 780px;
+@media screen and (max-width: $article-width + $aside-width + (2 * $font-size)) {
+  aside {
+    display: none;
+  }
+
+  nav.top {
+    justify-content: flex-start;
   }
 
   .content {
-    // justify-content: flex-start;
-    // .posts  {
-    //   min-width: calc(100% - 2em);
-    //   max-width: calc(100% - 2em);
-    // }
+    main {
+      width: 100%;
+      max-width: 100%;
 
-    aside {
-      display: none;
+      article {
+        max-width: 100%;
+        border-radius: 0;
+      }
     }
   }
 }
