--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,25 +7,26 @@ layout: compress
   <head>
     {% include head.html %}
 
+    <link rel="stylesheet" href="/css/new-look.css">
     <link rel="stylesheet" href="/css/about.css">
   </head>
 
   <body>
     {% include header.html %}
 
-    <div class="container main-container">
-      <section class="post">
-        <div class="post-header">
-          <h1 class="post-title">{{ page.title }}</h1>
-        </div>
+    <div class="content">
+      <main>
+        <article>
+          <h1>{{ page.title }}</h1>
 
-        <div class="post-content">
           {{ content }}
-        </div>
-      </section>
+        </article>
+      </main>
     </div>
 
     {% include analytics.html %}
     {% include optimizations.html %}
+
+    <script async src="/js/about.js"></script>
   </body>
 </html>
