--- a/css/about.scss
+++ b/css/about.scss
@@ -3,8 +3,10 @@
 @charset "utf-8";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-  "custom",
-  "gallery",
-  "about"
-;
+// @import
+//   "custom",
+//   "gallery",
+//   "about"
+// ;
+
+@import "gallery";
