Temporarily disable sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
-<div class="nav-content">
+<!-- <div class="nav-content">
   <b>Tag cloud</b>
   <a href="">Tag #1</a>
   <a href="">Tag #2</a>
   <a href="">Tag #3</a>
-</div>
+</div> -->
