--- a/css/new-look.scss
+++ b/css/new-look.scss
@@ -93,7 +93,7 @@ nav.top {
   // min-width: $article-width + $aside-width + $font-size;
 
   max-width: $article-width;
-  min-width: $article-width;
+  width: 100%;
   height: 100%;
   align-items: center;
 }
@@ -113,7 +113,6 @@ nav.top {
       margin-bottom: 1em;
       padding: 1em;
       background: #f7f7f9;
-      min-width: $article-width - (2 * $font-size);
       max-width: $article-width - (2 * $font-size);
       border-radius: 5px;
 
@@ -178,6 +177,7 @@ kbd {
   .content {
     main {
       width: 100%;
+      min-width: 0;
       max-width: 100%;
 
       article {
