--- a/css/new-look.scss
+++ b/css/new-look.scss
@@ -187,3 +187,12 @@ kbd {
     }
   }
 }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid black;
+
+  tr, td {
+    border: 1px solid black;
+  }
+}
