--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ comments: true
     </article>
   </main>
 
-  {% if page.tags %}
+  {% if page.tags.size > 0 %}
       <aside>
         <div class="nav-content">
           Tags
