--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ comments: true
           Tags
 
           {% for tag in page.tags %}
-            <a href="/{{ tag }}">{{ tag }}</a>
+            <a href="/tag.html?tag={{ tag }}">{{ tag }}</a>
           {% endfor %}
         </div>
       </aside>
