--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,4 @@
 {% if jekyll.environment != 'development' %}
     {% include google_analytics.html %}
+    {% include google_analytics_v4.html %}
 {% endif %}
