--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,19 @@ blockquote {
   font-style: italic;
 }
 
+code {
+  background: white;
+  padding: 2px 4px;
+  margin: 0 4px;
+  line-height: 1.5em;
+}
+
+pre code {
+  padding: 0;
+  margin: 0;
+  line-height: 1em;
+}
+
 table {
   border-collapse: collapse;
   border: 1px solid black;
