--- a/css/new-look.scss
+++ b/css/new-look.scss
@@ -14,6 +14,13 @@ body {
   background: #EB7849;
   font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
+
+  display: grid;
+  grid-template-rows: 64px auto 64px;
+  grid-template-columns: 10% 80% 10%;
+  row-gap: 2em;
+
+  overflow-x: hidden;
 }
 
 .vspace {
@@ -70,13 +77,24 @@ footer {
 nav.top {
   height: $header-height;
   background-color: #f7f7f9;
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
-  align-self: stretch;
-  align-items: center;
-  margin-bottom: 1em;
-  // font-size: 18px;
+  display: grid;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
+  grid-template-rows: 100%;
+  grid-template-columns: 10% 80% 10%;
+  row-gap: 0;
+
+  .align-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+
+    width: 100%;
+    height: 100%;
+  }
 
   a {
     color: #929292;
@@ -90,23 +108,9 @@ nav.top {
   }
 }
 
-.align-container {
-  display: flex;
-  flex-direction: row;
-  // max-width: $article-width + $aside-width + $font-size;
-  // min-width: $article-width + $aside-width + $font-size;
-
-  max-width: $article-width;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-}
-
 .content {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  margin-top: 1em;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
 
   main {
     max-width: $article-width;
