--- a/_includes/optimizations.html
+++ b/_includes/optimizations.html
@@ -47,7 +47,11 @@
       const ua = navigator.userAgent;
       const bgSrc = (ua.includes('Chrome') || ua.includes('Firefox')) ? '/images/background2-compressed.webp' : '/images/background2-compressed.jpg';
 
-      document.body.style['background'] = `url(${bgSrc}) no-repeat top left fixed`;
+      const img = new Image();
+
+      img.onload = () => document.body.style['background'] = `url(${bgSrc}) no-repeat top left fixed`;
+
+      img.src = bgSrc;
     }, 0);
   });
 </script>
