--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <nav class="top">
-  <div class="align-container">
+  <div class="links">
     <a class="nav-link nav-item {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
 
     <a class="nav-link nav-item {% if page.url == '/about/' %}active{% endif %}" href="/about/">About</a>
   </div>
-  <aside></aside>
 </nav>
