--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,28 +3,16 @@ layout: default
 comments: true
 ---
 
-<div class="content">
-  <main>
-    <article>
+<main>
+  <article>
+    <header>
       <h1>{{ page.title }}</h1>
 
       <span class="timestamp">
         {{ page.date | date: "%b %-d, %Y" }}
       </span>
+    </header>
 
-      {{ content }}
-    </article>
-  </main>
-
-  {% if page.tags.size > 0 %}
-      <aside>
-        <div class="nav-content">
-          Tags
-
-          {% for tag in page.tags %}
-            <a href="/tag.html?tag={{ tag }}">{{ tag }}</a>
-          {% endfor %}
-        </div>
-      </aside>
-  {% endif %}
-</div>
+    {{ content }}
+  </article>
+</main>
