--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ comments: true
     <header>
       <h1>{{ page.title }}</h1>
 
-      <span class="timestamp">
+      <time datetime="{{ page.date }}">
         {{ page.date | date: "%b %-d, %Y" }}
       </span>
     </header>
