--- a/_includes/optimizations.html
+++ b/_includes/optimizations.html
@@ -42,16 +42,18 @@
       head.appendChild(elt);
     });
 
-    setTimeout(() => {
-      // load heavy body background
-      const ua = navigator.userAgent;
-      const bgSrc = (ua.includes('Chrome') || ua.includes('Firefox')) ? '/images/background2-compressed.webp' : '/images/background2-compressed.jpg';
+    if (window.innerWidth > 375) {
+      setTimeout(() => {
+        // load heavy body background
+        const ua = navigator.userAgent;
+        const bgSrc = (ua.includes('Chrome') || ua.includes('Firefox')) ? '/images/background2-compressed.webp' : '/images/background2-compressed.jpg';
 
-      const img = new Image();
+        const img = new Image();
 
-      img.onload = () => document.body.style['background'] = `url(${bgSrc}) no-repeat top left fixed`;
+        img.onload = () => document.body.style.background = `url(${bgSrc}) no-repeat top left fixed`;
 
-      img.src = bgSrc;
-    }, 0);
+        img.src = bgSrc;
+      }, 0);
+    }
   });
 </script>
